# naf

./: .build  Cargo.toml  build.rs  readme.md  wrapper.h
breakpoint/: CMakeCache.txt  CMakeLists.txt  Makefile
breakpoint/src/: breakpoint.cpp
cpp/: mywidget.cpp  mywidget.h  testtab.cpp  testtab.h  testtabtype.cpp  testtabtype.h  testui.cpp  testui.h  ui.cpp  ui.h
examples/: readme.md
examples/basic/src/: lib.rs
examples/old/: Cargo.toml
plugin/: .build  Cargo.toml  build.rs  build.sh  ideas.md  todo.md  wrapper.h
plugin/c-src/: interface.c  interface.cpp  interface.h  temp.c
plugin/c-src/temp/: temp.c
plugin/src/: binaryninja.rs  expression.rs  lib.rs  liftcheck.rs  main.rs  ninja.rs  run.rs  state.rs
src/: bitvector.rs  debugger.rs  debugger_ui.rs  emulator.rs  expression.rs  lib.rs  liftcheck.rs  llil_emulator.rs  ninja.rs  notes.md  procedures.rs  program.rs  project.rs  python.rs  radare2.rs  run.rs  solver.rs  state.rs  symbolic_executor.rs  symbolic_state.rs  taint_tracker.rs
