[package]
name = "naf"
version = "0.1.0"
authors = ["Ryan Snyder <ryan.snyder.or@gmail.com>"]

[dependencies]
#binja = { git = "https://gitlab.com/rsnyder/binja-rs.git", features = ["rayon"] }
binja = { path = "binja-rs", features = ["rayon"] }
#riscv-dis = { git = "https://gitlab.com/binja-rs/riscv-dis.git" }
log = "0.4"
rayon = "1.0"
z3 = "0.5.0"
cpython = "0.5"
binaryninjacore-sys = { path = "binja-rs/binaryninjacore-sys" }
libloading = "0.6"

[build-dependencies]
bindgen = "0.53.1"
cc = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"
lto = true
