[package]
name = "naf"
version = "0.1.0"
authors = ["Ryan Snyder <ryan.snyder.or@gmail.com>"]

[dependencies]
#binja = { git = "https://gitlab.com/rsnyder/binja-rs.git", features = ["rayon"] }
binja = { path = "binja-rs", features = ["rayon"] }
#riscv-dis = { git = "https://gitlab.com/binja-rs/riscv-dis.git" }
log = "0.4"
rayon = "1.0"
z3 = "0.9.0"
cpython = "0.5"
binaryninjacore-sys = { path = "binja-rs/binaryninjacore-sys" }
libloading = "0.6"
unicorn = {path = "deps/unicorn/bindings/rust", version="1.0.0"}

# Radare2 stuff
libc = "0.2.71"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "0.9"
r2pipe = "0.5.0"
rsmt2 = "0.10.0"

[build-dependencies]
bindgen = "0.53.1"
cc = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"
lto = true
