[package]
name = "binja-riscv"
version = "0.1.0"
authors = ["Ryan Snyder <ryan.snyder.or@gmail.com>"]

[dependencies]
binaryninja = {git = "https://github.com/Vector35/binaryninja-api.git", branch = "dev", features=["rayon"]}
#binaryninja = { git = "https://github.com/Vector35/binaryninja-api.git", branch="dev"}
#binja = { path = "binja-rs", features = ["rayon"] }
#riscv-dis = { git = "https://gitlab.com/binja-rs/riscv-dis.git" }
log = "0.4"
rayon = "1.0"
z3 = "0.5.0"
cpython = "0.5"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
