[package]
name = "plugin"
version = "0.1.0"
authors = ["0xchase <chasekanipe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.55.1"
cc = {version = "1.0", features = ["parallel"]}
